Sun Jan 18 18:32:20 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* math.c (math_atan2): revive documentation before r49220.
	  http://d.hatena.ne.jp/nagachika/20150112/ruby_trunk_changes_49213_49226

Sun Jan 18 15:57:32 2015  Seiei Higa  <hanachin@gmail.com>

	* vm_method.c (check_definition): Module#public_method_defined?,
	  Module#private_method_defined?, Module#protected_method_defined?
	  should not use refinements. [ruby-core:67656] [Bug #10753]

Sun Jan 18 15:50:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_dump.c (rb_vm_bugreport): check by configured result instead
	  of system name for old FreeBSD.  based on a patch by Steve Wills
	  at [ruby-core:67655].  [Bug #10752]

Sun Jan 18 12:56:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (VPATH, NEWLINE_C), common.mk (common-srcs): make
	  and use newline.c under enc/trans directory, not toplevel.  no
	  longer search enc directory implicitly.

	* configure.in, enc/Makefile.in (BUILTIN_ENCS, BUILTIN_TRANSES):
	  prefix respective directory names to builtin encodings and
	  transcoder source names.

Sun Jan 18 11:49:46 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): avoid SEGV when VT_RECORD
	  variable is passed by reference. [ruby-dev:48803] [Bug #10697]

Sat Jan 17 23:59:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_String):
	  anchors like `\Z` are not valid inside character class.  use
	  negative-lookahead instead.
	  Fixes: https://github.com/tenderlove/psych/issues/221

Sat Jan 17 23:42:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: get rid of pattern substitution, which is not
	  supported by ash, and ash on NetBSD parses whole source first
	  and fails to start.  [ruby-dev:48823] [Bug #10750]

Fri Jan 16 18:42:58 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb: support adding related revisions
	  to issues.
